# getodac

./: .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  EXCEPTION.GPL  README.md  build_test.sh  conanfile.txt  getodac.pro
.github/workflows/: main.yml
conf/: CMakeLists.txt  conf.pro  generate_cert.sh  getodac.service  server.conf  server.crt  server.key  server_logging.conf  server_ssl_ctx.cfg  server_ssl_ctx.conf  staticFiles.conf  usr.local.bin.GETodac
include/: CMakeLists.txt  include.pro
include/dracon/: exceptions.h  http.h  logging.h  plugin.h  restful.h  stream.h  thread_worker.h  utils.h
include/getodac/: abstract_restful_session.h  abstract_restfull_session.h  abstract_server_session.h  abstract_service_session.h  exceptions.h  http.h  logging.h  plugin.h  restful.h  stream.h  thread_worker.h  utils.h
src/: CMakeLists.txt  src.pro
src/include/: abstract_server_session.h  abstract_service_session.h  include.pro
src/include/getodac/: abstract_restfull_session.h  abstract_server_session.h  abstract_service_session.h  exceptions.h  restful.h  thread_worker.h  utils.h
src/plugins/: CMakeLists.txt  plugins.pro
src/plugins/staticContent/: CMakeLists.txt  staticContent.pro  staticContentPlugin.cpp  static_content_plugin.cpp
src/plugins/test/: CMakeLists.txt  test.pro  test_plugin.cpp
src/server/: CMakeLists.txt  main.cpp  secured_server_session.cpp  secured_server_session.h  server.cpp  server.h  server.pro  server_logger.h  server_plugin.cpp  server_plugin.h  server_service_sessions.cpp  server_service_sessions.h  server_session.cpp  server_session.h  serverlogger.h  serverplugin.cpp  serverplugin.h  serverservicesessions.cpp  serverservicesessions.h  serversession.cpp  serversession.h  sessions_event_loop.cpp  sessions_event_loop.h  sessionseventloop.cpp  sessionseventloop.h  streams.cpp  streams.h  x86_64-signal.h
template/: CMakeLists.txt  LICENSE
template/conf/: CMakeLists.txt  MyCoolProject.conf
template/src/: CMakeLists.txt  main.cpp
template/tests/: CMakeLists.txt  devices.cpp  main.cpp
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  EasyCurl.cpp  EasyCurl.h  GETodacServer.cpp  GETodacServer.h
tests/server_tests/: CMakeLists.txt  ResponseStatusErrorExceptions.cpp  Responses.cpp  StressServer.cpp  Utils.cpp  Utils.h  global.cpp  global.h  server_tests.cpp
